<resources>

    <string name="app_name">KUMON</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_TopMenu">公文式</string>
    <string name="title_grading">採点状況</string>
    <string name="title_TopMenu">トップメニュー</string>
    <string name="title_LearningList">教材リスト</string>
    <string name="title_study">教室学習</string>
    <string name="title_StudyStart">今日の学習</string>
    <string name="title_StudyFinish">学習の終了</string>
    <string name="title_MarkFinish">採点依頼の終了</string>
    <string name="title_GetNewFinish">教材取得の終了</string>
    <string name="text_name">お名前： </string>
    <string name="text_san">さん</string>
    <string name="text_register">登録</string>
    <string name="text_cancel">キャンセル</string>
    <string name="text_environment_setting">環境設定</string>
    <string name="text_environment_variables">環境変数</string>
    <string name="text_exit">終了</string>
    <string name="text_log">ログ</string>
    <string name="text_data">データ</string>
    <string name="text_teacher_memo">指導者メモ</string>
    <string name="text_memory">メモリー</string>
    <string name="text_back">戻る</string>
    <string name="text_clear">クリア</string>
    <string name="text_inclassroomruby">きょうしつぶん</string>
    <string name="text_inclassroom">教室分</string>
    <string name="text_inhomeworkruby">しゅくだいぶん</string>
    <string name="text_inhomework">宿題分</string>
    <string name="text_materiallabel">教材：</string>
    <string name="text_studyfinish">学習が終わりました。</string>
    <string name="text_callteacher">指導者に連絡して、採点を行ってもらってください。</string>
    <string name="text_correctruby">ていせい</string>
    <string name="text_correct">訂正があります</string>
    <string name="text_specialteststart">&quot;はじめる&quot;をクリックして、テストを始めてください。\n\nクリックと同時に、回答時間の計測が始まります。\n制限時間がきたら自動的に終了します。</string>
    <string name="text_standardtime">標準時間：</string>
    <string name="text_limittime">制限時間：</string>
    <string name="text_zerominute">０分</string>
    <string name="text_studyrange">学習範囲：</string>
    <string name="text_kara">1から</string>
    <string name="text_mai">枚</string>
    <string name="text_password">PASSWORD</string>
    <string name="text_text">text</string>
    <string name="text_source">source</string>
    <string name="text_space">　</string>
    <string name="text_five">5</string>
    <string name="text_waitgrade">採点待ち</string>
    <string name="text_waitgraderuby">さいてんまち</string>
    <string name="text_gradingstatus">採点待ち：　5人</string>
    <string name="text_redpen">赤ペン</string>
    <string name="text_redpen_off">   </string>
    
    <string name="text_env_webserviceurl">WebService Url</string>
    <string name="text_env_webpageurl">Web Page Url</string>
    <string name="text_env_updateurl">Update Url</string>
    <string name="text_env_keepdays">回答済みデータ保存期間</string>
    <string name="text_env_logkeepdays">ログ保存期間</string>
    <string name="text_env_soaptimeout">通信タイムアウト</string>

    <string name="text_setting_initalldata">全初期化</string>
    <string name="text_setting_inituserdata">学習者データ　初期化</string>
    <string name="text_setting_initquestions">問題データ　初期化</string>
    <string name="text_setting_getquestions">問題データ　取得</string>
    
    <string name="text_maintenance">ただいまメンテナンス中です</string>
    <string name="text_notavailablenow">ただいまメンテナンス中のためご利用いただけません。\nしばらくお待ちください。</string>
    
    <string name="text_progress_processing">処理中</string>
    <string name="text_progress_message">しばらくお待ちください…</string>
    
    <string name="text_playbacktime">00:00/99:99</string>
    <string name="text_recordtime">00:00</string>
    
    <string name="text_version">Ver1.0</string>
    <string name="text_pagenumber">00/00</string>
    <string name="text_pagenumber3">000/000</string>
    
    <string name="text_yes">YES</string>
    <string name="text_no">NO</string>
    <string name="text_ok">OK</string>
    <string name="text_positive">はい</string>
    <string name="text_negative">キャンセル</string>
    <string name="text_open">付箋を開く</string>
    <string name="text_later">後で見る</string>
    
    <string name="image_description_title_big">大きなロゴ</string>
    <string name="image_description_logos">小さなロゴ</string>
    <string name="image_description_start">はじめるボタン</string>
    <string name="image_description_receive">受け取るボタン</string>
    <string name="image_description_send">送るボタン</string>
    <string name="image_description_show">見るボタン</string>
    <string name="image_description_reshow">もう一度見るボタン</string>
    <string name="image_description_grading">採点を行うボタン</string>
    <string name="image_description_graph">成績表ボタン</string>
    <string name="image_description_chart">学習グラフボタン</string>
    <string name="image_description_namechange">名前が違うボタン</string>
    <string name="image_description_totop">トップへボタン</string>
    <string name="image_description_setup">設定ボタン</string>
    <string name="image_description_back">戻るボタン</string>
    <string name="image_description_pen_playback">ペン再生ボタン</string>
    <string name="image_description_postiticon">付箋ボタン</string>
    <string name="image_description_inbtn_back">バックボタン</string>
    <string name="image_description_inbtn_pw">PWボタン</string>
    <string name="image_description_inbtn_next">ネクストボタン</string>
    <string name="image_description_hana">花丸</string>
    <string name="image_description_speaker">スピーカー</string>
    <string name="image_description_brest">休憩ボタン</string>
    <string name="image_description_finish">終了ボタン</string>
    <string name="image_description_bskipback">先頭問題ボタン</string>
    <string name="image_description_bback">前問題ボタン</string>
    <string name="image_description_bnext">次問題ボタン</string>
    <string name="image_description_bskipnext">最終問題ボタン</string>
    <string name="image_description_undo">アンドゥボタン</string>
    <string name="image_description_rplisten">聞くボタン</string>
    <string name="image_description_rpback">戻すボタン</string>
    <string name="image_description_rpnext">進めるボタン</string>
    <string name="image_description_rppause">録再停止ボタン</string>
    <string name="image_description_rpstop">録再終了ボタン</string>
    <string name="image_description_rprecord">録音ボタン</string>
    <string name="image_description_rpstartx1">等倍再生ボタン</string>
    <string name="image_description_rpstartx2">2倍再生ボタン</string>
    <string name="image_description_rpstartx4">4倍再生ボタン</string>
    <string name="image_description_rpstartx6">6倍再生ボタン</string>
    <string name="image_description_rpstartx8">8倍再生ボタン</string>
    <string name="image_description_close">閉じるボタン</string>
    <string name="image_description_ink">インク</string>
    <string name="image_description_title">タイトル</string>
    <string name="image_description_memo">メモ</string>
    <string name="text_resume">続きから始める</string>
</resources>
