<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/setting_topview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/AppBG"
    android:gravity="fill_vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:text="@string/text_environment_setting"
        android:textColor="#FF000000"
        android:textSize="28sp" />

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:onClick="onClickEnv"
        android:text="@string/text_environment_variables" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:text="@string/text_data"
        android:textColor="#FF000000"
        android:textSize="22sp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="240dp"
        android:onClick="onClickClearAll"
        android:text="@string/text_setting_initalldata" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="310dp"
        android:onClick="onClickClearStudent"
        android:text="@string/text_setting_inituserdata" />

    <Spinner
        android:id="@+id/Spinner_Student"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="355dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="440dp"
        android:onClick="onClickClearQuestion"
        android:text="@string/text_setting_initquestions" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="500dp"
        android:onClick="onClickReceiveQuestion"
        android:text="@string/text_setting_getquestions"
        android:visibility="gone" />

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="700dp"
        android:onClick="onClickLog"
        android:text="@string/text_log" />

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="900dp"
        android:onClick="onClickEnd"
        android:text="@string/text_exit" />

</RelativeLayout>