<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/maintenance_topview"
    style="@style/AppBG"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >
     
	<TextView
	    android:id="@+id/toptext"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:layout_marginTop="200dp"
	    android:gravity="center"
	    android:text="@string/text_maintenance"
	    android:textColor="#FF000000"
	    android:textSize="36sp" />

	<TextView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/toptext"
	    android:layout_marginTop="60dp"
	    android:layout_centerHorizontal="true"
	    android:gravity="center"
	    android:lineSpacingMultiplier="1.5"
	    android:text="@string/text_notavailablenow"
	    android:textColor="#FF000000"
	    android:textSize="22sp" />

	<ImageButton
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_centerHorizontal="true"
	    android:layout_marginBottom="85dp"
	    android:contentDescription="@string/image_description_back"
	    android:onClick="onClickBack"
	    android:src="@drawable/btn_back" />
		
</RelativeLayout>
